Make responsive header

--- a/snippets/header-bottom.liquid
+++ b/snippets/header-bottom.liquid
@@ -30,13 +30,13 @@
           <div class="shoping-cart">
             {%- include 'mini-cart' -%}
           </div>
-          
+
+          <div class="hamburger-menu">
+            <!-- mobile-menu start -->
+            <div class="mobile-menu d-block d-lg-none"></div>
+            <!-- mobile-menu end -->
+          </div>
         </div>
-      </div>
-      <div class="col">
-        <!-- mobile-menu start -->
-        <div class="mobile-menu d-block d-lg-none"></div>
-        <!-- mobile-menu end -->
       </div>
     </div>
   </div>
