--- a/assets/style.css
+++ b/assets/style.css
@@ -184,14 +184,18 @@ ul {
 
 @media only screen and (max-width: 767px) {
   .container {
-    width: 450px;
+    width: 90%;
+    max-width: 90%;
   }
 }
-@media only screen and (max-width: 479px) {
-  .container {
-    width: 320px;
+
+@media only screen and (max-width: 484px) {
+  #header-bottom-area .container {
+    width: 100%;
+    max-width: 100%;
   }
 }
+
 .capitalize {
   text-transform: capitalize;
 }
@@ -1423,8 +1427,8 @@ color:#fff;
   .container-box .header-bottom-right {
     margin: 0px 0px 22px 0;
     -webkit-box-pack: left;
-        -ms-flex-pack: left;
-            justify-content: left;
+    -ms-flex-pack: left;
+    justify-content: left;
   }
   .container-box .container-box-inner {
     padding: 20px 0;
@@ -1446,8 +1450,8 @@ color:#fff;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   padding: 20px 0;
 }
 @media only screen and (min-width: 1200px) and (max-width: 1600px) {
@@ -1679,8 +1683,12 @@ color:#fff;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  align-items: center;
+}
+.header-bottom-right .hamburger-menu {
+  padding-left: 20px;
 }
 .header-bottom-right .shoping-cart button {
   border: none;
@@ -1693,14 +1701,9 @@ color:#fff;
 .header-bottom-right .shoping-cart button:hover {
   color: #8a8f6a;
 }
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .header-bottom-right {
-    margin: 40px 45px 30px 0;
-  }
-}
 @media only screen and (max-width: 767px) {
-  .header-bottom-right {
-    margin: 20px 45px 0 0;
+  .header-bottom-area .header-bottom-right {
+    margin: 20px 0;
   }
 }
 
@@ -1926,7 +1929,7 @@ color:#fff;
   }
 }
 .hero-slider .slider-text-info h1 {
-  font-size: 40px;
+  font-size: 50px;
   text-transform: capitalize;
   margin-bottom: 20px;
   font-weight: 400;
@@ -1945,7 +1948,6 @@ color:#fff;
 }
 @media only screen and (max-width: 479px) {
   .hero-slider .slider-text-info h1 {
-    font-size: 20px;
     margin-bottom: 10px;
     font-weight: 600;
   }
@@ -3185,34 +3187,15 @@ color:#fff;
 /*-- 
     08. Mobile Menu Css
 -------------------------*/
-.mobile-menu {
-  float: left;
-  width: 100% !important;
-  position: relative !important;
-}
 .mobile-menu .mean-bar {
   position: relative;
   /*---- Mean Nav ----*/
 }
 .mobile-menu .mean-bar .meanmenu-reveal {
-  position: absolute;
-  top: -53px;
+  display: block;
+  width: 100%;
+  height: 100%;
   color: #000;
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .mobile-menu .mean-bar .meanmenu-reveal {
-    top: -58px;
-  }
-}
-@media only screen and (max-width: 767px) {
-  .mobile-menu .mean-bar .meanmenu-reveal {
-    top: -48px;
-  }
-}
-@media only screen and (max-width: 479px) {
-  .mobile-menu .mean-bar .meanmenu-reveal {
-    top: -42px;
-  }
 }
 .mobile-menu .mean-bar .meanmenu-reveal span {
   position: relative;
@@ -6055,7 +6038,7 @@ color:#fff;
 .about-wrap{text-align:center}
 .about-wrap .section-title{margin-bottom:30px;}
 
-    .setting-top:hover>.dropdown-menu {
+.setting-top:hover>.dropdown-menu {
   display: block;
 }
 
@@ -6065,18 +6048,18 @@ color:#fff;
 }
 .header-area .dropdown-menu{width:210px;}
 
-@media screen and (max-width:1200px) {
-  .theme-logo img{max-width:100% !important; height:auto; display:block;}
-  .main-menu-area ul li{margin-right:15px;}
+.theme-logo {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
-@media screen and (max-width: 768px) {
-  .theme-logo {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
+@media screen and (max-width:1200px) {
   .theme-logo img {
     max-width: 150px !important;
+  }
+
+  .main-menu-area ul li{
+    margin-right:15px;
   }
 }
