--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -23,3 +23,43 @@
     $button.parent().find('input').val(newVal);
   });
 </script>
+
+<script>
+  function SAWOrderNote(note) {
+    note = note.replace("old text", "new text");
+    return note;
+  }
+  
+  function SAWComplete(res) {
+    setTimeout(function() {
+      jQuery(".cart__note-add").click();
+    }, 500);
+
+    if (res.warning_note != '') {
+      var $cSelectors = [
+        '.purchase-benefits',
+        'input[name="checkout"]',
+        'button[name="checkout"]',
+        '[href$="checkout"]','input[name="goto_pp"]',
+        'button[name="goto_pp"]',
+        'input[name="goto_gc"]',
+        'button[name="goto_gc"]',
+        '.google-wallet-button-holder',
+        '.amazon-payments-pay-button',
+        '.alt-payment-list-amazon-button-image',
+        '.additional-checkout-button__logo'
+      ];
+
+      $cSelectors.forEach(function(selector) {
+        jQuery(selector).remove();
+      });
+      return;
+    }
+
+    setTimeout(function() {
+      //jQuery(".saw-cart-original-total").remove();
+    }, 10);
+    
+    return;
+  }
+</script>
