--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -51,6 +51,7 @@
   {% if template contains 'customers' %}
     {{ 'shopify_common.js' | shopify_asset_url | script_tag }}
   {% endif %}
+<script src="//code.tidio.co/dzzq5zngmzkzc5lxzzpd8mvhgm5ohehv.js"></script>
 
 </head>
 
@@ -103,12 +104,12 @@
   <script>
 
     
-//     $('.top-selector-wrapper li.setting-top').hover(function() {
-//        $(this).find('.dropdown-menu').stop(true, true).delay(200).fadeIn(500);
-//     },
-//     function() {
-//        $(this).find('.dropdown-menu').stop(true, true).delay(200).fadeOut(500);
-//     });
+    /*$('.top-selector-wrapper li.setting-top').hover(function() {
+       $(this).find('.dropdown-menu').stop(true, true).delay(200).fadeIn(500);
+    },
+    function() {
+       $(this).find('.dropdown-menu').stop(true, true).delay(200).fadeOut(500);
+    });*/
     
     
     $('.top-selector-wrapper li.setting-top').hover(function(){
