--- a/snippets/header-social-icon.liquid
+++ b/snippets/header-social-icon.liquid
@@ -1,6 +1,6 @@
 
 {% if section.settings.social_icon_1_name != blank %}
-<li><a href="{{ section.settings.social_icon_1_link }}"  onclick="tidioChatApi.open()"  title="twitter"><i class="fa fa-{{ section.settings.social_icon_1_name }}"></i> CHAT</a></li>
+<li><a href="{{ section.settings.social_icon_1_link }}" class="header-live-chat" title="Live Chat"><i class="fa fa-comments-o"></i> Live Chat</a></li>
 {% endif %}
 {% if section.settings.social_icon_2_name != blank %}
 <li><a href="{{ section.settings.social_icon_2_link }}" title="Rss"><i class="fa fa-{{ section.settings.social_icon_2_name }}"></i></a></li>
