download latest version theme

--- a/assets/timber.scss.liquid
+++ b/assets/timber.scss.liquid
@@ -2461,3 +2461,24 @@ label.error {
 }
 
 {% endif %} // settings.ajax_cart_method
+
+
+.btn-dark {
+    background: #333333 none repeat scroll 0 0;
+    border: 0 none;
+    border-radius: 3px;
+    color: #ffffff;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 400;
+    height: 40px;
+    line-height: 40px;
+    padding: 0 25px;
+    text-transform: capitalize;
+    -webkit-transition: all 0.4s ease-out 0s;
+    transition: all 0.4s ease-out 0s;
+}
+.btn-dark:hover {
+    background: #25aae1; 
+}
