Fix announcement bar and hamburger dropdown menu

--- a/assets/style.css
+++ b/assets/style.css
@@ -3249,9 +3249,6 @@ body.box-body {
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
 }
-.mobile-menu .mean-bar .mean-nav {
-  background-color: #000000;
-}
 .mobile-menu .mean-bar .mean-nav > ul {
   margin-bottom: 30px;
   border: 1px solid #eeeeee;
@@ -3262,6 +3259,12 @@ body.box-body {
   .mobile-menu .mean-bar .mean-nav > ul {
     max-height: 280px;
     overflow-y: auto;
+    position: absolute;
+    top: 20px;
+    right: 0;
+    width: 200px;
+    background-color: #000000;
+    z-index: 9999;
   }
 }
 @media only screen and (max-width: 479px) {
