--- a/snippets/mini-cart.liquid
+++ b/snippets/mini-cart.liquid
@@ -54,7 +54,7 @@
   <!-- Mini Cart Button start -->
   <button class="dropdown-toggle mini-cart">
     <i class="fa fa-shopping-cart"></i> 
-    {{ section.settings.cart_item_title }} 
+    <span class="cart-title">{{ section.settings.cart_item_title }}</span>
     (<span class="bigcounter">{{ item_count }}</span>)
   </button>
   <!-- Mini Cart button end -->
